--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <h2>Weather Forecast</h2>
+    </div>
+
+    <div class="body"></div>
+
+    <div class="footer">
+      <h4>Copyright @ FirePea</h4>
+    </div>
+  </body>
 </html>
