Add functions for dealing with API data

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,16 @@
       <h2>Weather Forecast</h2>
     </div>
 
-    <div class="body"></div>
+    <div class="body">
+
+      <div class="weathercard">
+
+        <h2>Kingston Ontario</h2>
+        
+      </div>
+
+
+    </div>
 
     <div class="footer">
       <h4>Copyright @ FirePea</h4>
