Add search bar to search for city

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,17 @@
 
     <div class="body">
 
+      <div class="search">
+
+        <form id="city--search" action="">
+
+          <input type="text">
+          <button>Search</button>
+
+        </form>
+        
+      </div>
+
       <div class="weathercard">
 
         <h2>Kingston Ontario</h2>  
