--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
 
         <form id="city--search" action="">
 
-          <input type="text">
-          <button>Search</button>
+          <input type="text" id="city--input">
+          <button type="submit">Search</button>
 
         </form>
         
