Add functionality to hide and show weathercard

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         
       </div>
 
-      <div class="weathercard">
+      <div class="weathercard hidden">
 
         <h2>Kingston Ontario</h2>  
 
