Succesffuly retrieving data from API and updating card

--- a/src/index.html
+++ b/src/index.html
@@ -25,15 +25,15 @@
 
       <div class="weathercard hidden">
 
-        <h2>Kingston Ontario</h2>  
+        <h2 id="location">Kingston Ontario</h2>  
 
-        <p>Cloudy with a Chance of Meatballs</p>
+        <p id="condition">Cloudy with a Chance of Meatballs</p>
         
-        <h2>28.76 C</h2>
+        <h2 id="temp">28.76 C</h2>
 
-        <p>Feels Like: 34.77 C</p>
-        <p>Humidity: 80%</p>
-        <p>Wind: 5.66 km/h</p>
+        <p id="feels--like">Feels Like: 34.77 C</p>
+        <p id="humidity">Humidity: 80%</p>
+        <p id="wind--speed">Wind: 5.66 km/h</p>
         
       </div>
 
