Change styling for web app

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,12 @@
 
 			<form id="city--search" action="">
 
-				<input type="text" id="city--input">
-				<button type="submit">Search</button>
+				<label class="input--label" for="city--input">Enter a Location to Search the Weather for:</label>
+
+				<div class="search--bar">
+					<input type="text" id="city--input">
+					<button class="submit" type="submit">Search</button>
+				</div>
 
 			</form>
 
@@ -46,10 +50,5 @@
 
 
 	</div>
-
-	<div class="footer">
-		<h4>Copyright @ FirePea</h4>
-	</div>
-</body>
 
 </html>
