--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,6 @@
 </head>
 
 <body>
-	<div class="header">
-		<h1>Weather Forecast</h1>
-	</div>
 
 	<div class="body">
 
@@ -18,10 +15,8 @@
 
 			<form id="city--search" action="">
 
-				<label class="input--label" for="city--input">Enter a Location to Search the Weather for:</label>
-
 				<div class="search--bar">
-					<input type="text" id="city--input">
+					<input placeholder="Search Location" type="text" id="city--input">
 					<button class="submit" type="submit">Search</button>
 				</div>
 
